[package]
name = "fselect"
version = "0.8.1"
authors = ["jhspetersson <jhspetersson@gmail.com>"]
description = "Find files with SQL-like queries"
keywords = ["find", "files", "sql", "query", "tool"]
categories = ["filesystem", "command-line-utilities", "command-line-interface"]
documentation = "https://github.com/jhspetersson/fselect/blob/master/docs/usage.md"
homepage = "https://github.com/jhspetersson/fselect"
repository = "https://github.com/jhspetersson/fselect"
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2021"

[features]
default = ["users"]

[dependencies]
atty = "0.2"
base64 = "0.13"
bytecount = "0.6"
chrono = "0.4"
chrono-english = "0.1"
csv = "1.0"
directories = "4.0"
humansize = "2.0"
imagesize = "0.10"
kamadak-exif = "0.5"
lazy_static = "1.3"
lscolors = "0.12"
matroska = "0.19"
mp3-metadata = "0.3"
mp4parse = "0.12"
nu-ansi-term = "0.46"
rand = "0.8"
regex = "1.1"
rustyline = "10.0.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha-1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
svg = "0.12"
toml = "0.5"
tree_magic_mini = { version = "3.0", features = [ "tree_magic_db" ] }
wana_kana = "2.0"
zip = "0.6"

[target.'cfg(unix)'.dependencies]
users = { version = "0.11", optional = true }
xattr = "0.2"

[profile.release]
lto = true

[package.metadata.deb]
section = "utility"
extended-description = """\
* SQL-like (not real SQL, but highly relaxed!) grammar easily understandable by humans
* complex queries
* aggregate, statistics, date, and other functions
* search within archives
* .gitignore, .hgignore, and .dockerignore support (experimental)
* search by width and height of images, EXIF metadata
* search by MP3 info
* search by extended file attributes
* search by file hashes
* search by MIME type
* shortcuts to common file types
* interactive mode
* various output formatting (CSV, JSON, and others)"""