[package]
name = "fselect"
version = "0.8.9"
authors = ["jhspetersson <jhspetersson@gmail.com>"]
description = "Find files with SQL-like queries"
keywords = ["find", "files", "sql", "query", "tool"]
categories = ["filesystem", "command-line-utilities", "command-line-interface"]
documentation = "https://github.com/jhspetersson/fselect/blob/master/docs/usage.md"
homepage = "https://github.com/jhspetersson/fselect"
repository = "https://github.com/jhspetersson/fselect"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2024"

[features]
default = ["git", "users", "update-notifications"]
git = ["dep:git2"]
update-notifications = ["dep:update-informer"]
users = ["dep:uzers"]

[dependencies]
bytecount = "0.6"
chrono = "0.4"
chrono-english = "0.1"
csv = "1.0"
directories = "6.0"
git2 = { version = "0.20.0", default-features = false, optional = true }
human-time = "0.1.6"
humansize = "2.0"
imagesize = "0.13"
kamadak-exif = "0.6"
lscolors = { version = "0.20", features = [ "nu-ansi-term" ] }
matroska = "0.28"
mp3-metadata = "0.3"
mp4parse = "0.17"
nu-ansi-term = "0.50"
rand = "0.9"
rbase64 = "2.0"
regex = "1.1"
rustyline = "15"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha-1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
svg = "0.18"
toml = "0.8"
tree_magic_mini = { version = "3.0", features = [ "with-gpl-data" ] }
update-informer = { version = "1.1.0", optional = true }
wana_kana = "4.0"
wavers = "1.1"
zip = "2.0"

[target.'cfg(unix)'.dependencies]
uzers = { version = "0.12", optional = true }
xattr = "1.0"

[profile.release]
lto = true

[package.metadata.deb]
section = "utility"
extended-description = """\
* SQL-like (not real SQL, but highly relaxed!) grammar easily understandable by humans
* complex queries
* aggregate, statistics, date, and other functions
* search within archives
* .gitignore, .hgignore, and .dockerignore support (experimental)
* search by width and height of images, EXIF metadata
* search by MP3 info
* search by extended file attributes and Linux capabilities
* search by file hashes
* search by MIME type
* shortcuts to common file types
* interactive mode
* various output formatting (CSV, JSON, and others)"""
